Fixed display of long headings on smaller screens

--- a/app/assets/stylesheets/components/headings.scss
+++ b/app/assets/stylesheets/components/headings.scss
@@ -87,6 +87,20 @@
     }
     .navbar-show-scrolled {
       display: block;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      max-width: 80%;
+    }
+  }
+}
+
+@media screen and (min-width: $screen-sm-min) {
+  #top-menu {
+    &.navbar-scrolled {
+      .navbar-show-scrolled {
+        max-width: initial;
+      }
     }
   }
 }
